[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.75"
